# Job-Tracker

./: .gitignore  CONTRIBUTING.md  README.md  fake.env  index.html  job_audit_2026-06-05.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.node.json
.github/: dependabot.yml
.github/workflows/: ci.yml  frontend.yml  python.yml  rust.yml  weekly-audit.yml
docs/: README.md  architecture.md  maintenance.md  refactor-sync-roadmap.md
docs/superpowers/plans/: 2026-03-25-job-detail-enrichment.md  2026-04-24-capture-workflow-implementation.md
docs/superpowers/specs/: 2026-03-25-job-detail-enrichment-design.md  2026-04-24-capture-workflow-design.md
scripts/: install-desktop-shortcut.sh  post-tauri-build.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  jobtracker.desktop  nsis-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  db.rs  google_oauth.rs  job_search.rs  lib.rs  listing_check.rs
src/components/: AppHeader.tsx  QuickCaptureDrawer.test.tsx  QuickCaptureDrawer.tsx  SettingsModal.tsx  WorkspaceEmpty.tsx
src/context/: JobTrackerContext.tsx
src/features/capture/: CaptureInboxPanel.tsx  UrlCaptureCard.tsx  captureInbox.test.ts  captureInbox.ts  capturePipeline.ts  urlCapture.test.ts  urlCapture.ts
src/features/deadlines/: DeadlinesView.tsx  JobCalendarMonth.tsx
src/features/extraction/: extractJobInfo.test.ts  extractJobInfo.ts
src/features/files/: PdfStoreService.ts
src/features/jobSearch/: KeywordPanel.tsx  PlatformResultsList.tsx  SearchResultCard.tsx  saveSearchResult.test.ts  saveSearchResult.ts  useJobSearch.test.ts  useJobSearch.ts
src/features/jobs/: JobBoard.tsx  JobDetailTimeline.tsx  JobForm.tsx  JobTable.tsx  ListingStatusDot.tsx
src/features/reminders/: ReminderCenter.tsx
src/hooks/: useJobTrackerState.test.ts  useJobTrackerState.ts  useTheme.ts
src/i18n/: en.ts
src/lib/: statusUtils.test.ts  statusUtils.ts  tauriApi.ts  theme.ts  types.ts
src/lib/calendar/: googleSync.test.ts  googleSync.ts  jobOccurrences.test.ts  jobOccurrences.ts
src/lib/db/: schema.ts
src/lib/export/: exportBundle.test.ts  exportBundle.ts
src/lib/jobs/: duplicateCheck.test.ts  duplicateCheck.ts  groupJobsByStatus.test.ts  groupJobsByStatus.ts  jobTableColumns.test.ts  jobTableColumns.ts  sortJobs.test.ts  sortJobs.ts
src/pages/: AddJobPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  JobDetailPage.tsx  JobSearchPage.tsx
tests/: test_export_schema.py
tests/fixtures/: sample_export.json
