# Python dev tooling (tests/). Install: uv sync

[project]
name = "job-tracker-dev"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "black>=24.0",
  "isort>=5.13",
  "ruff>=0.8.0",
]

[tool.black]
target-version = ["py312"]
line-length = 88
include = '\.pyi?$'
# Literal TOML string: backslashes must not be escape sequences (invalid in "...").
extend-exclude = '/(\.eggs|\.git|node_modules|dist|src-tauri/target)/'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["tests"]
skip_gitignore = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["tests"]
extend-exclude = ["node_modules", "src-tauri/target", "dist"]

[tool.ruff.lint]
# Import order: isort (Black profile). Ruff = fast linter (Flake8-class rules + more).
select = [
  "E",
  "W",
  "F",
  "B",
  "UP",
  "SIM",
  "RUF",
]
